增加了 @Autowired 注解，实现简单的按name注入。（不能解决循环依赖）